[package]
name = "chasm-api"
version = "0.1.0"
authors = ["Martin Hartl <martin@hartl.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
json = "0.12"
serde_json = "1.0"
base64 = "0.12.0"
chrono = "0.4.11"